src/resources/src/scss/navigation.scss
// ==========================================================================

// Navigation for Craft CMS
// Author: Verbb - https://verbb.io/

// ==========================================================================

// ==========================================================================
// Third Party
// ==========================================================================

@import "font-awesome";


//
// Accordion Tabs
//

#main-container #main #main-content #details {
    // background: #f1f5f8 !important;
    // padding: 0;
}

.nav-sidebar #accordion {
    position: relative;
    z-index: 1;
    box-shadow: inset 0 -1px 0 #e3e5e8;
    min-height: 40px;
    overflow: hidden;
    box-shadow: 0 0 0 1px rgba(205, 216, 228, 0.25), 0 2px 12px rgba(205, 216, 228, 0.5);
    border-radius: 5px;
}

#main-container #main #main-content #details .text {
    background: #fff !important;
    border-color: #bed1df;

    &:focus {
        border-color: rgba(0, 0, 20, 0.4);
    }
}

.nav-sidebar #accordion .tab-list {
    display: block;
    max-width: inherit;
}

.nav-sidebar #accordion .tab-list-item {
    .tab {
        color: #576575;
        border-bottom: 1px solid rgba(0, 0, 20, 0.1);
        max-width: 100% !important;

        position: relative;
        display: block;
        padding: 10px 20px;
        white-space: nowrap;
        overflow: hidden;
        background: #f3f7fc;

        &:after {
            font-family: 'Craft';
            speak: none;
            font-feature-settings: "liga", "dlig";
            text-rendering: optimizeLegibility;
            font-weight: normal;
            font-variant: normal;
            text-transform: none;
            line-height: 1;
            direction: ltr;
            display: inline-block;
            text-align: center;
            font-style: normal;
            vertical-align: middle;
            word-wrap: normal !important;
            user-select: none;
            content: 'downangle';
            float: right;
            margin-top: 2px;
            font-size: 16px;
        }

        &:hover {
            text-decoration: none;
            background: darken(#f3f7fc, 2%);
        }

        &.sel {
            color: #29323d;
            padding-bottom: 10px;

            &:after {
                transform: rotate(180deg);
            }
        }
    }
}

.tab-list-pane {
    background: #cdd8e4;
    padding: 20px;
    border-bottom: 1px solid rgba(0, 0, 20, 0.1);
}


//
// HUD Editor
//

.nav-editor-hud .main {
    padding: 20px;
    overflow: visible;
}

.nav-editor-hud .main-container {
    overflow-y: auto !important;
}

.nav-editor-hud .hud-footer {
    padding: 14px 20px;
}

.nav-editor-hud .fields {
    font-size: 12px;
    line-height: 1.2;
}

.nav-editor-hud .elementselect,
.nav-editor-hud table.editable + .btn.add {
    line-height: 1.5;
}

.nav-editor-hud th.thin,
.nav-editor-hud td.thin {
    width: 10px !important;
}

.nav-editor-hud .fields .field {
    margin: 20px 0;
}



//
// Structure
//

.nav-builder > li:first-child > .row {
    border-top: 1px dotted rgba(115, 127, 140, 0.15);
}

.nav-builder .row {
    border-bottom: 1px dotted rgba(115, 127, 140, 0.15);
}

.nav-builder .icon.move,
.nav-builder .icon.settings,
.nav-builder .icon.delete {
    opacity: 0;
    transition: opacity linear 100ms;
}

.nav-builder .fa {
    font-size: 11px;
}

.nav-builder .fa,
.nav-builder .icon {
    margin: 5px 5px 0 0;
    display: inline-block;

    &:hover:before,
    &:before {
        color: rgba(0, 0, 0, 0.2);
    }
}

.nav-builder .classes {
    color: #8f98a3;
    margin: 5px 5px 0 0;
    display: inline-block;
}

.nav-builder a.icon {
    &:hover:before {
        color: #0d78f2;
    }
}

.nav-builder .node-element {
    display: inline-block;
    padding: 6px 7px;

    &.loading {
        padding-right: 29px;
    }
}

.nav-builder .node-type {
    float: right;
    font-size: 12px;
    text-transform: lowercase;
    padding: 6px 7px;
    cursor: default;
    text-align: right;

    span {
        padding: 3px 10px;
        border-left: 2px solid #CCC;
        color: #999;
        background: #F5F5F5;
    }

    .node-type-manual {
        color: #0d78f2;
        border-color: #0d78f2;
    }

    .node-type-category {
        color: #1BB311;
        border-color: #1BB311;
    }

    .node-type-asset {
        color: #da5a47;
        border-color: #da5a47;
    }
}

.nav-builder .status.disabled {
    background-color: #D0021B;
}

.structure .draghelper .icon,
.structure .draghelper .node-type {
    display: none;
}


// ==========================================================================
// Settings
// ==========================================================================

.navigation-settings-tabs li {
    width: 100%;
    max-width: 100% !important;
}

